test/collection/errors/index.js
module.exports = [].concat(
  require('./syntax'),
  require('./logic'),
  require('./restrictions')
);